--- a/sysid/analyze.ipynb
+++ b/sysid/analyze.ipynb
@@ -578,6 +578,26 @@
    ]
   },
   {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# timeframes_thrust = [\n",
+    "#     {\n",
+    "#         \"flight\": 1,\n",
+    "#         \"start\": \n",
+    "#     }\n",
+    "# ]\n",
+    "# timeframes_inertia = [\n",
+    "\n",
+    "# ]\n",
+    "\n",
+    "flights_thrust = [flights[i] for i in [0, 4, 5]]\n",
+    "flights_inertia = [flights[i] for i in [1, 2]]"
+   ]
+  },
+  {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
@@ -718,7 +738,8 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "sliced_and_interpolated_flights = slice_gaps_and_interpolate(flights)"
+    "sliced_and_interpolated_flights_thrust = slice_gaps_and_interpolate(flights_thrust)\n",
+    "sliced_and_interpolated_flights_inertia = slice_gaps_and_interpolate(flights_inertia)"
    ]
   },
   {
@@ -751,6 +772,7 @@
     "    return np.array(rpms_filtered)\n",
     "\n",
     "def combine(flights, T_m, frd=True):\n",
+    "    from scipy.spatial.transform import Rotation as R\n",
     "    def FRD2FLU(x):\n",
     "        return np.array([x[0], -x[1], -x[2]])\n",
     "\n",
@@ -786,8 +808,8 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "T_m = 0.05\n",
-    "combined = combine(sliced_and_interpolated_flights, T_m)"
+    "T_m_test = 0.05\n",
+    "combined_test = combine(sliced_and_interpolated_flights_thrust, T_m_test)"
    ]
   },
   {
@@ -796,7 +818,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "combined[\"acceleration\"].shape"
+    "combined_test[\"acceleration\"].shape"
    ]
   },
   {
@@ -805,15 +827,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "\n",
-    "# we want to do something\n",
-    "# we have selected flights to use for this\n",
-    "# cut out the relevant timeframe\n",
-    "# we slice the flights based on gaps and interpolate\n",
-    "# we then preprocess the data with time correlation (depends on the motor model) => makes the data iid\n",
-    "# we use the iid data to estimate parameters\n",
-    "\n",
-    "def estimate_motor_parameters(combined, model, exponents):\n",
+    "def estimate_motor_parameters(combined, model, exponents, verbose=True):\n",
     "    b = []\n",
     "    A = []\n",
     "\n",
@@ -831,12 +845,29 @@
     "\n",
     "    A = np.array(A).reshape(-1, 4 * len(exponents))\n",
     "    b = np.array(b).reshape(-1)\n",
-    "    print(f\"A shape: {A.shape}\")\n",
-    "    print(f\"b shape: {b.shape}\")\n",
+    "    if verbose:\n",
+    "        print(f\"A shape: {A.shape}\")\n",
+    "        print(f\"b shape: {b.shape}\")\n",
     "    K_f = np.linalg.lstsq(A, b, rcond=None)[0].reshape(-1, len(exponents))\n",
-    "    return K_f\n",
+    "    rmse = np.sqrt(np.mean((A @ K_f.reshape(-1) - b) ** 2))\n",
+    "    return K_f, rmse"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
     "\n",
-    "from scipy.spatial.transform import Rotation as R\n",
+    "# we want to do something\n",
+    "# we have selected flights to use for this\n",
+    "# cut out the relevant timeframe\n",
+    "# we slice the flights based on gaps and interpolate\n",
+    "# we then preprocess the data with time correlation (depends on the motor model) => makes the data iid\n",
+    "# we use the iid data to estimate parameters\n",
+    "\n",
+    "\n",
     "rotor_x_displacement = 0.4179/2\n",
     "rotor_y_displacement = 0.481332/2\n",
     "# model is in FLU frame\n",
@@ -863,12 +894,157 @@
     "    ])\n",
     "}\n",
     "g = np.array([0, 0, -model[\"gravity\"]])\n",
-    "T_m = 0.05\n",
     "exponents = [0, 2]\n",
-    "K_f = estimate_motor_parameters(combined, model, exponents)\n",
+    "K_f_test, rmse = estimate_motor_parameters(combined_test, model, exponents)\n",
+    "K_f_test_mean = K_f_test.mean(axis=0)\n",
+    "print(f\"K_f_test: {K_f_test}\")\n",
+    "print(f\"K_f_test_mean: {K_f_test_mean}\")\n",
+    "# rmse = motor_model_rmse(K_f_mean, combined, model, exponents)\n",
+    "print(f\"RMSE: {rmse:.3f}\")\n",
+    "\n",
+    "from tqdm import tqdm\n",
+    "from tqdm.notebook import tqdm\n",
+    "\n",
+    "T_m_candidates = np.linspace(0.001, 0.3, 20)\n",
+    "results = [(T_m, *estimate_motor_parameters(combine(sliced_and_interpolated_flights_thrust, T_m), model, exponents, verbose=False)) for T_m in tqdm(T_m_candidates)]\n",
+    "T_m, K_fs, rmses = zip(*results)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "T_m = T_m_candidates[np.argmin(rmses)]\n",
+    "K_f = K_fs[np.argmin(rmses)]\n",
     "K_f_mean = K_f.mean(axis=0)\n",
-    "print(f\"K_f: {K_f}\")\n",
-    "print(f\"K_f_mean: {K_f_mean}\")"
+    "plt.figure()\n",
+    "plt.plot(T_m_candidates, rmses, label=f\"T_m = {T_m}\")\n",
+    "plt.legend()\n",
+    "plt.show()\n",
+    "\n",
+    "combined_thrust = combine(sliced_and_interpolated_flights_thrust, T_m)\n",
+    "combined_inertia = combine(sliced_and_interpolated_flights_inertia, T_m)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "use_mean_kf = True\n",
+    "A = []\n",
+    "b = []\n",
+    "\n",
+    "t = []\n",
+    "\n",
+    "num_steps = len(combined_inertia[\"rpms\"])\n",
+    "for step_i in tqdm(range(num_steps)):\n",
+    "    wx, wy, wz = np.zeros(3) #combined[\"omega\"][step_i]\n",
+    "    dwx, dwy, dwz = combined_inertia[\"domega\"][step_i]\n",
+    "    rpm = combined_thrust[\"rpms\"][step_i]\n",
+    "    thrusts = [sum([(K_f_mean if use_mean_kf else K_f[motor_i])[exponent_i] * rpm[motor_i] ** exponent for exponent_i, exponent in enumerate(exponents)]) for motor_i in range(4)]\n",
+    "    t.append(thrusts)\n",
+    "    current_b = np.array([np.cross(model[\"rotor_positions\"][motor_i], model[\"rotor_thrust_directions\"][motor_i]) * thrusts[motor_i] for motor_i in range(4)]).sum(axis=0)\n",
+    "    b.append(current_b[:2])\n",
+    "    # current_A_J = np.array([\n",
+    "    #     [dwx, -wy*wz, wz*wy],\n",
+    "    #     [wx*wz, dwy, -wz*wx],\n",
+    "    #     [-wx*wy, wy*wx, dwz]\n",
+    "    # ])\n",
+    "    current_A_J = np.array([\n",
+    "        [dwx, 0],\n",
+    "        [0, dwy],\n",
+    "    ])\n",
+    "    # current_A_Kd = np.array([-model[\"rotor_torque_directions\"][motor_i] * thrusts[motor_i] for motor_i in range(4)]).T\n",
+    "    # current_A = np.concatenate([current_A_J, current_A_Kd], axis=1)\n",
+    "    A.append(current_A_J)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "use_mean_kf = True\n",
+    "A = []\n",
+    "b = []\n",
+    "\n",
+    "t = []\n",
+    "torques = []\n",
+    "\n",
+    "num_steps = len(combined_inertia[\"rpms\"])\n",
+    "for step_i in tqdm(range(num_steps)):\n",
+    "    wx, wy, wz = np.zeros(3) #combined[\\\"omega\\\"][step_i]\\n\",\n",
+    "    dwx, dwy, dwz = combined_inertia[\"domega\"][step_i]\n",
+    "    rpm = combined_inertia[\"rpms\"][step_i]\n",
+    "    thrusts = [sum([(K_f_mean if use_mean_kf else K_f[motor_i])[exponent_i] * rpm[motor_i] ** exponent for exponent_i, exponent in enumerate(exponents)]) for motor_i in range(4)]\n",
+    "    t.append(thrusts)\n",
+    "    current_b = np.array([np.cross(model[\"rotor_positions\"][motor_i], model[\"rotor_thrust_directions\"][motor_i]) * thrusts[motor_i] for motor_i in range(4)]).sum(axis=0)\n",
+    "    torques.append(current_b)\n",
+    "    b.append(current_b[:2])\n",
+    "    # current_A_J = np.array([\\n\",\n",
+    "    #     [dwx, -wy*wz, wz*wy],\\n\",\n",
+    "    #     [wx*wz, dwy, -wz*wx],\\n\",\n",
+    "    #     [-wx*wy, wy*wx, dwz]\\n\",\n",
+    "    # ])\\n\",\n",
+    "    current_A_J = np.array([\n",
+    "        [dwx, 0],\n",
+    "        [0, dwy],\n",
+    "    ])\n",
+    "    # current_A_Kd = np.array([-model[\\\"rotor_torque_directions\\\"][motor_i] * thrusts[motor_i] for motor_i in range(4)]).T\\n\",\n",
+    "    # current_A = np.concatenate([current_A_J, current_A_Kd], axis=1)\\n\",\n",
+    "    A.append(current_A_J)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "A = np.array(A).reshape(-1, 2)\n",
+    "b = np.array(b).reshape(-1)\n",
+    "\n",
+    "t = np.array(t)\n",
+    "torques = np.array(torques)\n",
+    "torques.shape"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "plt.scatter(t.sum(axis=1), combined_inertia[\"acceleration\"][:, 2]*model[\"mass\"]) \n",
+    "plt.plot([0, 100], [0, 100], color=\"red\")\n",
+    "K_f_mean"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# I_xx, I_yy, I_zz, *K_d = np.linalg.lstsq(A, b, rcond=None)[0]\n",
+    "# np.diag([I_xx, I_yy, I_zz])\n",
+    "[I_xx, I_yy] = np.linalg.lstsq(A, b, rcond=None)[0]\n",
+    "print(f\"I_xx: {I_xx:.3f}\")\n",
+    "print(f\"I_yy: {I_yy:.3f}\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "plt.scatter(torques[:, 0], combined_inertia[\"domega\"][:, 0], s=0.1)\n",
+    "torques_in_x = np.linspace(torques[:, 0].min(), torques[:, 0].max(), 100)\n",
+    "plt.plot(torques_in_x, torques_in_x / (I_xx*2), color=\"red\")"
    ]
   },
   {
@@ -895,8 +1071,8 @@
     "combine_motor_models = lambda rpms: np.array([motor_model(i, rpm) for i, rpm in enumerate(rpms)]).sum(axis=0)\n",
     "plt.figure()\n",
     "plt.title(\"Predicted vs Actual Thrust (individual motor models)\")\n",
-    "predicted_thrust = np.array(list(map(combine_motor_models, combined[\"rpms\"])))\n",
-    "actual_thrust = combined[\"acceleration\"][:, 2] * model[\"mass\"]\n",
+    "predicted_thrust = np.array(list(map(combine_motor_models, combined_thrust[\"rpms\"])))\n",
+    "actual_thrust = combined_thrust[\"acceleration\"][:, 2] * model[\"mass\"]\n",
     "motor_models_description = \"\\n\".join([f\"motor {i}: {', '.join([f'K_f{exponent}={k:.2f}' for exponent, k in zip(exponents, K_f[i])])}\" for i in range(4)])\n",
     "plt.scatter(predicted_thrust, actual_thrust, s=0.1, label=motor_models_description)\n",
     "min_thrust = min(predicted_thrust.min(), actual_thrust.min())\n",
@@ -917,8 +1093,8 @@
     "plt.figure()\n",
     "plt.title(\"Mean motor model\")\n",
     "label = f\"model: {', '.join([f'K_f{exponent}={k:.2f}' for exponent, k in zip(exponents, K_f_mean)])}\"\n",
-    "plt.scatter((combined[\"rpms\"] ** 2).sum(axis=1), actual_thrust, s=0.1, label=label)\n",
-    "inputs = np.linspace(combined[\"rpms\"].min(), (combined[\"rpms\"]**2).sum(axis=1).max(), 100)\n",
+    "plt.scatter((combined_thrust[\"rpms\"] ** 2).sum(axis=1), actual_thrust, s=0.1, label=label)\n",
+    "inputs = np.linspace(combined_thrust[\"rpms\"].min(), (combined_thrust[\"rpms\"]**2).sum(axis=1).max(), 100)\n",
     "plt.plot(inputs, np.array([K_f_mean[0]*4 + K_f_mean[1] * ip for ip in inputs]) , color=\"red\")\n",
     "plt.legend()\n",
     "plt.show()"
