--- a/sysid/analyze.ipynb
+++ b/sysid/analyze.ipynb
@@ -334,6 +334,44 @@
    "metadata": {},
    "outputs": [],
    "source": [
+    "df_inertias[\"model\"]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# df_inertias_sane = df_inertias[df_inertias[\"i_xx\"] < 0.15]\n",
+    "df_inertias_sane = df_inertias\n",
+    "plt.scatter((df_inertias_sane[\"i_xx\"] + df_inertias_sane[\"i_yy\"])/2, df_inertias_sane[\"i_zz\"], label=\"Data\")\n",
+    "# plt.scatter(np.maximum(df_inertias_sane[\"i_xx\"], df_inertias_sane[\"i_yy\"]), df_inertias_sane[\"i_zz\"], label=\"Max\")\n",
+    "inertias_input = np.linspace(df_inertias_sane[[\"i_xx\", \"i_yy\"]].min().min(), df_inertias_sane[[\"i_xx\", \"i_yy\"]].max().max(), 100)\n",
+    "plt.plot(inertias_input, df_inertias_sane[\"i_zz_ratio_mean\"].mean() * inertias_input, label=f\"Predicted (slope: {df_inertias_sane['i_zz_ratio_mean'].mean():.3f})\")\n",
+    "plt.xscale(\"log\")\n",
+    "plt.yscale(\"log\")\n",
+    "plt.xlabel(\"$\\\\frac{I_{xx} + I_{yy}}{2} \\quad [kg*m^2]$\")\n",
+    "plt.ylabel(r\"$I_{zz} \\quad [kg*m^2]$\")\n",
+    "plt.legend()\n",
+    "plt.savefig(f\"figures/inertia_ratio.pdf\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "print(df_inertias[[col for col in df_inertias.keys() if col not in [\"source\", \"i_zz_ratio_max\", \"Shape\"]]].to_latex())"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
     "plt.figure()\n",
     "counts, bin_edges, patches = plt.hist(df_inertias[\"i_zz_ratio_mean\"], bins=10)\n",
     "plt.title(\"Roll/Pitch (mean) -> Yaw Inertia Ratio Distribution\")\n",
@@ -756,7 +794,7 @@
    "outputs": [],
    "source": [
     "\n",
-    "def filter_rpms(timestamps, rpm_setpoints, T_m):\n",
+    "def filter_ema(timestamps, rpm_setpoints, T_m):\n",
     "    rpms_filtered = []\n",
     "    rpm = None\n",
     "    previous_t = None\n",
@@ -771,7 +809,8 @@
     "        previous_t = t\n",
     "    return np.array(rpms_filtered)\n",
     "\n",
-    "def combine(flights, T_m, frd=True):\n",
+    "def combine(flights, T_m, frd=True, T_omega=0.05, thrust_curves=None):\n",
+    "    assert thrust_curves is None or len(thrust_curves) == 4\n",
     "    from scipy.spatial.transform import Rotation as R\n",
     "    def FRD2FLU(x):\n",
     "        return np.array([x[0], -x[1], -x[2]])\n",
@@ -785,21 +824,48 @@
     "        # num_steps = len(timestamps)\n",
     "        rpm_setpoints = np.array([flight[\"data\"][f\"{output_topic}_control[{i}]\"][\"values\"] for i in range(4)]).T\n",
     "        flight[\"rpm_setpoints\"] = rpm_setpoints\n",
-    "        flight[\"rpms\"] = filter_rpms(timestamps, rpm_setpoints, T_m)\n",
+    "        flight[\"rpms\"] = filter_ema(timestamps, rpm_setpoints, T_m)\n",
     "        acceleration = np.array([flight[\"data\"][f\"vehicle_acceleration_xyz[{i}]\"][\"values\"] for i in range(3)]).T\n",
     "        flight[\"acceleration\"] = np.array(list(map(FRD2FLU, acceleration))) if frd else acceleration\n",
-    "        omega = np.array([flight[\"data\"][f\"vehicle_angular_velocity_xyz[{i}]\"][\"values\"] for i in range(3)]).T\n",
-    "        flight[\"omega\"] = np.array(list(map(FRD2FLU, omega))) if frd else omega\n",
-    "        domega = np.array([flight[\"data\"][f\"vehicle_angular_velocity_xyz_derivative[{i}]\"][\"values\"] for i in range(3)]).T\n",
-    "        flight[\"domega\"] = np.array(list(map(FRD2FLU, domega))) if frd else domega\n",
+    "        omega_original_frame = np.array([flight[\"data\"][f\"vehicle_angular_velocity_xyz[{i}]\"][\"values\"] for i in range(3)]).T\n",
+    "        omega = np.array(list(map(FRD2FLU, omega_original_frame))) if frd else omega_original_frame\n",
+    "        flight[\"omega\"] = omega\n",
+    "        domega_original_frame = np.array([flight[\"data\"][f\"vehicle_angular_velocity_xyz_derivative[{i}]\"][\"values\"] for i in range(3)]).T\n",
+    "        domega = np.array(list(map(FRD2FLU, domega_original_frame))) if frd else domega_original_frame\n",
+    "        flight[\"domega\"] = domega\n",
+    "        flight[\"domega_smooth\"] = filter_ema(timestamps, domega, T_omega)\n",
+    "        omega_fd = (omega[1:] - omega[:-1]) / (timestamps[1:] - timestamps[:-1]).reshape(-1, 1)\n",
+    "        flight[\"domega_fd\"] = np.concatenate([omega_fd, [omega_fd[-1]]])\n",
+    "        flight[\"domega_gradient\"] = np.gradient(omega, timestamps, axis=0)\n",
+    "        if thrust_curves is not None:\n",
+    "            def apply_thrust_curves(rpms, thrust_curves):\n",
+    "                thrusts = []\n",
+    "                for thrust_curve_motor, rpm in zip(thrust_curves, rpms):\n",
+    "                    acc = 0\n",
+    "                    for exponent, coeff in zip(range(3), thrust_curve_motor):\n",
+    "                        acc += rpm**exponent * coeff\n",
+    "                    thrusts.append(acc)\n",
+    "                return np.array(thrusts)\n",
+    "            flight[\"thrusts\"] = np.array([apply_thrust_curves(rpms, thrust_curves) for rpms in flight[\"rpms\"]])\n",
+    "        \n",
     "    \n",
+    "    thrusts_combined = {}\n",
+    "    if thrust_curves is not None:\n",
+    "        thrusts_combined = {\n",
+    "            \"thrusts\": np.concatenate([flight[\"thrusts\"] for flight in flights])\n",
+    "        }\n",
+    "\n",
     "    return {\n",
     "        \"rpm_setpoints\": np.concatenate([flight[\"rpm_setpoints\"] for flight in flights]),\n",
     "        \"rpms\": np.concatenate([flight[\"rpms\"] for flight in flights]),\n",
     "        \"acceleration\": np.concatenate([flight[\"acceleration\"] for flight in flights]),\n",
     "        \"omega\": np.concatenate([flight[\"omega\"] for flight in flights]),\n",
-    "        \"domega\": np.concatenate([flight[\"domega\"] for flight in flights])\n",
-    "    }\n"
+    "        \"domega\": np.concatenate([flight[\"domega\"] for flight in flights]),\n",
+    "        \"domega_smooth\": np.concatenate([flight[\"domega_smooth\"] for flight in flights]),\n",
+    "        \"domega_fd\": np.concatenate([flight[\"domega_fd\"] for flight in flights]),\n",
+    "        \"domega_gradient\": np.concatenate([flight[\"domega_gradient\"] for flight in flights]),\n",
+    "        **thrusts_combined\n",
+    "    }, flights\n"
    ]
   },
   {
@@ -809,7 +875,7 @@
    "outputs": [],
    "source": [
     "T_m_test = 0.05\n",
-    "combined_test = combine(sliced_and_interpolated_flights_thrust, T_m_test)"
+    "combined_test, _ = combine(sliced_and_interpolated_flights_thrust, T_m_test)"
    ]
   },
   {
@@ -850,7 +916,8 @@
     "        print(f\"b shape: {b.shape}\")\n",
     "    K_f = np.linalg.lstsq(A, b, rcond=None)[0].reshape(-1, len(exponents))\n",
     "    rmse = np.sqrt(np.mean((A @ K_f.reshape(-1) - b) ** 2))\n",
-    "    return K_f, rmse"
+    "    K_f_full = np.array([[K_f[motor_i][exponents.index(i)] if i in exponents else 0 for i in range(3)] for motor_i in range(4)])\n",
+    "    return K_f_full, rmse"
    ]
   },
   {
@@ -896,8 +963,8 @@
     "g = np.array([0, 0, -model[\"gravity\"]])\n",
     "exponents = [0, 2]\n",
     "K_f_test, rmse = estimate_motor_parameters(combined_test, model, exponents)\n",
-    "K_f_test_mean = K_f_test.mean(axis=0)\n",
     "print(f\"K_f_test: {K_f_test}\")\n",
+    "K_f_test_mean = K_f_test.mean(axis=0)\n",
     "print(f\"K_f_test_mean: {K_f_test_mean}\")\n",
     "# rmse = motor_model_rmse(K_f_mean, combined, model, exponents)\n",
     "print(f\"RMSE: {rmse:.3f}\")\n",
@@ -906,7 +973,7 @@
     "from tqdm.notebook import tqdm\n",
     "\n",
     "T_m_candidates = np.linspace(0.001, 0.3, 20)\n",
-    "results = [(T_m, *estimate_motor_parameters(combine(sliced_and_interpolated_flights_thrust, T_m), model, exponents, verbose=False)) for T_m in tqdm(T_m_candidates)]\n",
+    "results = [(T_m, *estimate_motor_parameters(combine(sliced_and_interpolated_flights_thrust, T_m)[0], model, exponents, verbose=False)) for T_m in tqdm(T_m_candidates)]\n",
     "T_m, K_fs, rmses = zip(*results)"
    ]
   },
@@ -924,8 +991,19 @@
     "plt.legend()\n",
     "plt.show()\n",
     "\n",
-    "combined_thrust = combine(sliced_and_interpolated_flights_thrust, T_m)\n",
-    "combined_inertia = combine(sliced_and_interpolated_flights_inertia, T_m)"
+    "thrust_curves = np.array([K_f_mean for _ in range(4)])\n",
+    "\n",
+    "combined_thrust, flights_thrust_processed = combine(sliced_and_interpolated_flights_thrust, T_m, thrust_curves=thrust_curves)\n",
+    "combined_inertia, flights_inertia_processed = combine(sliced_and_interpolated_flights_inertia, T_m, thrust_curves=thrust_curves)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "combine(sliced_and_interpolated_flights_thrust, T_m)"
    ]
   },
   {
@@ -968,34 +1046,48 @@
    "outputs": [],
    "source": [
     "use_mean_kf = True\n",
-    "A = []\n",
-    "b = []\n",
+    "A_full = []\n",
+    "A_2x2 = []\n",
+    "A_z_full = []\n",
+    "A_z = []\n",
+    "b_full = []\n",
+    "b_2 = []\n",
+    "b_z = []\n",
     "\n",
     "t = []\n",
     "torques = []\n",
+    "drag_torques = []\n",
     "\n",
     "num_steps = len(combined_inertia[\"rpms\"])\n",
     "for step_i in tqdm(range(num_steps)):\n",
     "    wx, wy, wz = np.zeros(3) #combined[\\\"omega\\\"][step_i]\\n\",\n",
-    "    dwx, dwy, dwz = combined_inertia[\"domega\"][step_i]\n",
+    "    dwx, dwy, dwz = combined_inertia[\"domega_fd\"][step_i]\n",
     "    rpm = combined_inertia[\"rpms\"][step_i]\n",
-    "    thrusts = [sum([(K_f_mean if use_mean_kf else K_f[motor_i])[exponent_i] * rpm[motor_i] ** exponent for exponent_i, exponent in enumerate(exponents)]) for motor_i in range(4)]\n",
+    "    # thrusts = [sum([(K_f_mean if use_mean_kf else K_f[motor_i])[exponent_i] * rpm[motor_i] ** exponent for exponent_i, exponent in enumerate(exponents)]) for motor_i in range(4)]\n",
+    "    thrusts = combined_inertia[\"thrusts\"][step_i]\n",
     "    t.append(thrusts)\n",
     "    current_b = np.array([np.cross(model[\"rotor_positions\"][motor_i], model[\"rotor_thrust_directions\"][motor_i]) * thrusts[motor_i] for motor_i in range(4)]).sum(axis=0)\n",
     "    torques.append(current_b)\n",
-    "    b.append(current_b[:2])\n",
-    "    # current_A_J = np.array([\\n\",\n",
-    "    #     [dwx, -wy*wz, wz*wy],\\n\",\n",
-    "    #     [wx*wz, dwy, -wz*wx],\\n\",\n",
-    "    #     [-wx*wy, wy*wx, dwz]\\n\",\n",
-    "    # ])\\n\",\n",
+    "    b_full.append(current_b[:2])\n",
+    "    b_2.append(current_b[:2])\n",
+    "    b_z.append(current_b[2])\n",
     "    current_A_J = np.array([\n",
+    "        [dwx, -wy*wz, wz*wy],\n",
+    "        [wx*wz, dwy, -wz*wx],\n",
+    "        [-wx*wy, wy*wx, dwz]\n",
+    "    ])\n",
+    "    current_A_Kd = np.array([-model[\"rotor_torque_directions\"][motor_i] * thrusts[motor_i] for motor_i in range(4)]).T #.sum(axis=1).reshape(3, 1)\n",
+    "    drag_torques.append(current_A_Kd)\n",
+    "    current_A = np.concatenate([current_A_J, current_A_Kd], axis=1)\n",
+    "    A_full.append(current_A)\n",
+    "    current_A_J_2x2 = np.array([\n",
     "        [dwx, 0],\n",
     "        [0, dwy],\n",
     "    ])\n",
-    "    # current_A_Kd = np.array([-model[\\\"rotor_torque_directions\\\"][motor_i] * thrusts[motor_i] for motor_i in range(4)]).T\\n\",\n",
-    "    # current_A = np.concatenate([current_A_J, current_A_Kd], axis=1)\\n\",\n",
-    "    A.append(current_A_J)"
+    "    A_2x2.append(current_A_J_2x2)\n",
+    "    A_z_full.append(np.array([dwz, *current_A_Kd[2, :]]))\n",
+    "    A_z.append(np.array([dwz, *current_A_Kd.sum(axis=1)]))\n",
+    "\n"
    ]
   },
   {
@@ -1004,12 +1096,17 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "A = np.array(A).reshape(-1, 2)\n",
-    "b = np.array(b).reshape(-1)\n",
+    "print(f\"A shape: {np.array(A_full).shape}\")\n",
+    "\n",
+    "A_full = np.array(A_full).reshape(-1, A_full[0].shape[-1])\n",
+    "b_full = np.array(b_full).reshape(-1)\n",
+    "A_2x2 = np.array(A_2x2).reshape(-1, A_2x2[0].shape[-1])\n",
+    "b_2 = np.array(b_2).reshape(-1)\n",
     "\n",
     "t = np.array(t)\n",
     "torques = np.array(torques)\n",
-    "torques.shape"
+    "drag_torques = np.array(drag_torques)\n",
+    "drag_torques.shape"
    ]
   },
   {
@@ -1018,7 +1115,16 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "plt.scatter(t.sum(axis=1), combined_inertia[\"acceleration\"][:, 2]*model[\"mass\"]) \n",
+    "np.unique(combined_inertia[\"thrusts\"])"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "plt.scatter(combined_thrust[\"thrusts\"].sum(axis=1), combined_thrust[\"acceleration\"][:, 2]*model[\"mass\"], s=0.05) \n",
     "plt.plot([0, 100], [0, 100], color=\"red\")\n",
     "K_f_mean"
    ]
@@ -1029,11 +1135,12 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "# I_xx, I_yy, I_zz, *K_d = np.linalg.lstsq(A, b, rcond=None)[0]\n",
-    "# np.diag([I_xx, I_yy, I_zz])\n",
-    "[I_xx, I_yy] = np.linalg.lstsq(A, b, rcond=None)[0]\n",
-    "print(f\"I_xx: {I_xx:.3f}\")\n",
-    "print(f\"I_yy: {I_yy:.3f}\")"
+    "start_index = np.argmax(flights_inertia_processed[0][\"timestamps\"] > 25)\n",
+    "end_index = np.argmax(flights_inertia_processed[0][\"timestamps\"] > 30)\n",
+    "\n",
+    "plt.plot(flights_inertia_processed[0][\"timestamps\"][start_index:end_index], flights_inertia_processed[0][\"domega_fd\"][start_index:end_index, 0])\n",
+    "plt.plot(flights_inertia_processed[0][\"timestamps\"][start_index:end_index], flights_inertia_processed[0][\"domega_gradient\"][start_index:end_index, 0])\n",
+    "plt.plot(flights_inertia_processed[0][\"timestamps\"][start_index:end_index], flights_inertia_processed[0][\"domega\"][start_index:end_index, 0])"
    ]
   },
   {
@@ -1042,9 +1149,9 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "plt.scatter(torques[:, 0], combined_inertia[\"domega\"][:, 0], s=0.1)\n",
-    "torques_in_x = np.linspace(torques[:, 0].min(), torques[:, 0].max(), 100)\n",
-    "plt.plot(torques_in_x, torques_in_x / (I_xx*2), color=\"red\")"
+    "combined_inertia[\"domega\"].shape\n",
+    "combined_inertia[\"thrusts\"].shape\n",
+    "torques[:, 2]"
    ]
   },
   {
@@ -1053,12 +1160,104 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "# example_flight = flights[0]\n",
-    "# plt.figure()\n",
-    "# for i in range(4):\n",
-    "#     plt.plot(flight[highest_frequency_name][\"timestamps\"], flight[f\"actuator_motors_mux_control[{i}]\"][\"values\"], label=f\"setpoint {i}\")\n",
-    "#     plt.plot(flight[highest_frequency_name][\"timestamps\"], rpms[:, i], label=f\"actual {i}\")\n",
-    "# plt.show()"
+    "I = []\n",
+    "for axis_i, axis_name in zip([0, 1], [\"x\", \"y\"]):\n",
+    "    dw_full = combined_inertia[\"domega\"][:, axis_i]\n",
+    "    torque_full = torques[:, axis_i]\n",
+    "    perc = 50\n",
+    "    dw_perc_lower = np.percentile(dw_full, perc)\n",
+    "    dw_perc_upper = np.percentile(dw_full, 100-perc)\n",
+    "    print(f\"domega lower: {dw_perc_lower:.3f} upper: {dw_perc_upper:.3f}\")\n",
+    "    mask = (dw_full < dw_perc_lower) | (dw_full > dw_perc_upper)\n",
+    "    torques_perc_lower = np.percentile(torque_full, perc)\n",
+    "    torques_perc_upper = np.percentile(torque_full, 100-perc)\n",
+    "    # mask &= (torque_full < torques_perc_lower) | (torque_full > torques_perc_upper)\n",
+    "    print(f\"masking rate: {1-mask.mean():.3f}\")\n",
+    "    dw = dw_full[mask]\n",
+    "    torque = torque_full[mask]\n",
+    "\n",
+    "    I_axis = 1/(dw**2).sum() * np.inner(dw, torque)\n",
+    "    print(f\"I_{axis_name}{axis_name}: {I_axis:.3f}\")\n",
+    "    plt.figure()\n",
+    "    plt.title(f\"Axis: {axis_name}\")\n",
+    "    if perc < 50:\n",
+    "        plt.scatter(torque_full, dw_full, s=0.1)\n",
+    "    plt.scatter(torque, dw, s=0.1)\n",
+    "    torques_in = np.linspace(torque_full.min(), torque_full.max(), 100)\n",
+    "    plt.plot(torques_in, torques_in / (I_axis), color=\"red\")\n",
+    "    plt.savefig(f\"figures/inertia_{axis_name}.pdf\")\n",
+    "    plt.show()\n",
+    "    I.append(I_axis)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "dwz = combined_inertia[\"domega\"][:, 2]\n",
+    "I_xx, I_yy = I[:2]\n",
+    "I_zz = (I_xx + I_yy)/2 * inertia_ratio if use_mean else max(I_xx, I_yy) * inertia_ratio\n",
+    "I = [I_xx, I_yy, I_zz]\n",
+    "torque_z = torques[:, 2]\n",
+    "I_xx, I_yy, I_zz"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "K_ds = []\n",
+    "perc_candidates = [50] #np.linspace(0.1, 50, 20)\n",
+    "for perc in perc_candidates:\n",
+    "    combined_inertia[\"thrusts\"].shape\n",
+    "    model[\"rotor_torque_directions\"].shape\n",
+    "    thrust_torques_inputs = combined_inertia[\"thrusts\"][:, :, np.newaxis] * model[\"rotor_torque_directions\"]\n",
+    "    thrust_torque_inputs_z_full = thrust_torques_inputs[:, :, 2].sum(axis=1)\n",
+    "    dwz_full = combined_inertia[\"domega\"][:, 2]\n",
+    "\n",
+    "    thrust_torque_input_perc_lower = np.percentile(thrust_torque_inputs_z_full, perc)\n",
+    "    thrust_torque_input_perc_upper = np.percentile(thrust_torque_inputs_z_full, 100-perc)\n",
+    "    mask = (thrust_torque_inputs_z_full < thrust_torque_input_perc_lower) | (thrust_torque_inputs_z_full > thrust_torque_input_perc_upper)\n",
+    "\n",
+    "    dwz_perc_lower = np.percentile(dwz_full, perc)\n",
+    "    dwz_perc_upper = np.percentile(dwz_full, 100-perc)\n",
+    "    mask &= (dwz_full < dwz_perc_lower) | (dwz_full > dwz_perc_upper)\n",
+    "\n",
+    "    thrust_torque_inputs_z = thrust_torque_inputs_z_full[mask]\n",
+    "    dwz = dwz_full[mask]\n",
+    "\n",
+    "    b_full = dwz_full * I_zz\n",
+    "    b = dwz * I_zz\n",
+    "\n",
+    "    K_d = 1/(thrust_torque_inputs_z ** 2).sum() * np.inner(thrust_torque_inputs_z, b)\n",
+    "    K_ds.append(K_d)\n",
+    "\n",
+    "    plt.figure()\n",
+    "    plt.scatter(thrust_torque_inputs_z_full, b_full, s=0.01)\n",
+    "    # plt.scatter(thrust_torque_inputs_z, dwz, s=0.1, color=\"red\")\n",
+    "    plt.plot(thrust_torque_inputs_z, K_d * thrust_torque_inputs_z, color=\"red\", label=f\"$K_d$ = {K_d:.3f}\")\n",
+    "    plt.ylabel(f\"Angular Acceleration (z) $\\\\times$ $I_{{zz}}$ \")\n",
+    "    plt.xlabel(f\"Normalized Torque (z)\")\n",
+    "    plt.legend()\n",
+    "    plt.savefig(f\"figures/K_d_{perc}.pdf\")\n",
+    "    plt.show()\n",
+    "\n",
+    "\n",
+    "    print(f\"K_d: {K_d:.3f}\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "plt.scatter(combined_thrust[\"thrusts\"].sum(axis=1), combined_thrust[\"acceleration\"][:, 2]*model[\"mass\"])\n",
+    "plt.plot([0, 100], [0, 100], color=\"red\")"
    ]
   },
   {
