--- a/sysid/analyze_new.ipynb
+++ b/sysid/analyze_new.ipynb
@@ -18,7 +18,6 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "\n",
     "ulog_files = [\n",
     "    \"logs/2024-01-08-pavel-fs/log_63_2024-1-8-16-37-54.ulg\",\n",
     "    \"logs/2024-01-08-pavel-fs/log_64_2024-1-8-16-39-44.ulg\",\n",
@@ -37,7 +36,8 @@
    "outputs": [],
    "source": [
     "output_topic = \"actuator_motors_mux\"\n",
-    "inertia_ratio = 1.879"
+    "inertia_ratio = 1.879\n",
+    "exponents_thrust_curve = [0, 2]"
    ]
   },
   {
@@ -117,6 +117,36 @@
     "        }\n",
     "    } for name, df in zip(ulog_files, dfs)\n",
     "]"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### API\n",
+    "List of separate flights (probably from the same .ulog, arm->disarm). \n",
+    "```\n",
+    "flights = {\n",
+    "    \"name\": \"flight1.ulg\",\n",
+    "    \"data\": {\n",
+    "        \"vehicle_attitude_q[0]\": {\n",
+    "            \"timestamps\": [0, 0.001, 0.002, ...],\n",
+    "            \"values\": [1, 0.99, 0.98, ...],\n",
+    "        },\n",
+    "        \"vehicle_attitude_q[1]\": {...},\n",
+    "        ...\n",
+    "        \"vehicle_acceleration_xyz[0]\": {...},\n",
+    "        ...\n",
+    "        \"vehicle_angular_velocity_xyz[0]\": {...},\n",
+    "        ...\n",
+    "        \"vehicle_angular_velocity_xyz_derivative[0]\": {...},\n",
+    "        ...\n",
+    "        \"actuator_motors_control[0]\": {...},\n",
+    "        ...\n",
+    "    }\n",
+    "}\n",
+    "```\n",
+    "Note: The timestamps do not need to be synchronized, and the frequencies of logging can vary between the timeseries. They will be synchronized and interpolated based on the highest frequency one"
    ]
   },
   {
@@ -229,7 +259,7 @@
     "    {\n",
     "        \"flight\": 3,\n",
     "        \"start\": 15,\n",
-    "        \"end\": 45\n",
+    "        \"end\": 30\n",
     "    }\n",
     "]"
    ]
@@ -265,7 +295,8 @@
    "outputs": [],
    "source": [
     "flights_thrust = extract_timeframes(flights, timeframes_thrust)\n",
-    "flights_inertia = extract_timeframes(flights, timeframes_inertia_roll_pitch)"
+    "flights_inertia_roll_pitch = extract_timeframes(flights, timeframes_inertia_roll_pitch)\n",
+    "flights_inertia_yaw = extract_timeframes(flights, timeframes_inertia_yaw)"
    ]
   },
   {
@@ -274,7 +305,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "[f[\"name\"] for f in flights_inertia]"
+    "[f[\"name\"] for f in flights_inertia_roll_pitch]"
    ]
   },
   {
@@ -411,7 +442,8 @@
    "outputs": [],
    "source": [
     "sliced_and_interpolated_flights_thrust = slice_gaps_and_interpolate(flights_thrust)\n",
-    "sliced_and_interpolated_flights_inertia = slice_gaps_and_interpolate(flights_inertia)"
+    "sliced_and_interpolated_flights_inertia_roll_pitch = slice_gaps_and_interpolate(flights_inertia_roll_pitch)\n",
+    "sliced_and_interpolated_flights_inertia_yaw = slice_gaps_and_interpolate(flights_inertia_yaw)"
    ]
   },
   {
@@ -481,12 +513,17 @@
     "                    thrusts.append(acc)\n",
     "                return np.array(thrusts)\n",
     "            flight[\"thrusts\"] = np.array([apply_thrust_curves(rpms, thrust_curves) for rpms in flight[\"rpms\"]])\n",
+    "            motor_thrust_to_torque_geometric = np.array([np.cross(model[\"rotor_positions\"][motor_i], model[\"rotor_thrust_directions\"][motor_i]) for motor_i in range(4)])\n",
+    "            flight[\"pre_torque\"] = flight[\"thrusts\"][:, :, np.newaxis] * model[\"rotor_torque_directions\"]\n",
+    "            flight[\"pre_torque_geometric\"] = flight[\"thrusts\"][:, :, np.newaxis] * motor_thrust_to_torque_geometric\n",
     "        \n",
     "    \n",
     "    thrusts_combined = {}\n",
     "    if thrust_curves is not None:\n",
     "        thrusts_combined = {\n",
-    "            \"thrusts\": np.concatenate([flight[\"thrusts\"] for flight in flights])\n",
+    "            \"thrusts\": np.concatenate([flight[\"thrusts\"] for flight in flights]),\n",
+    "            \"pre_torque\": np.concatenate([flight[\"pre_torque\"] for flight in flights]),\n",
+    "            \"pre_torque_geometric\": np.concatenate([flight[\"pre_torque_geometric\"] for flight in flights]),\n",
     "        }\n",
     "\n",
     "    return {\n",
@@ -518,16 +555,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "combined_test[\"acceleration\"].shape"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "def estimate_motor_parameters(combined, model, exponents, verbose=True):\n",
+    "def estimate_motor_parameters(combined, model, exponents, verbose=True, separate=True):\n",
     "    b = []\n",
     "    A = []\n",
     "\n",
@@ -538,19 +566,29 @@
     "        b.append(model[\"mass\"] * acceleration)\n",
     "        current_A = []\n",
     "        rpm = combined[\"rpms\"][step_i]\n",
-    "        for motor_i in range(4):\n",
+    "        if separate:\n",
+    "            for motor_i in range(4):\n",
+    "                for exponent in exponents:\n",
+    "                    current_A.append(model[\"rotor_thrust_directions\"][motor_i] * rpm[motor_i] ** exponent)\n",
+    "        else:\n",
     "            for exponent in exponents:\n",
-    "                current_A.append(model[\"rotor_thrust_directions\"][motor_i] * rpm[motor_i] ** exponent)\n",
+    "                acc = np.zeros(3)\n",
+    "                for motor_i in range(4):\n",
+    "                    acc += model[\"rotor_thrust_directions\"][motor_i] * rpm[motor_i] ** exponent\n",
+    "                current_A.append(acc)\n",
     "        A.append(np.array(current_A).T)\n",
     "\n",
-    "    A = np.array(A).reshape(-1, 4 * len(exponents))\n",
+    "    A = np.array(A).reshape(-1, (4 if separate else 1) * len(exponents))\n",
     "    b = np.array(b).reshape(-1)\n",
     "    if verbose:\n",
     "        print(f\"A shape: {A.shape}\")\n",
     "        print(f\"b shape: {b.shape}\")\n",
     "    K_f = np.linalg.lstsq(A, b, rcond=None)[0].reshape(-1, len(exponents))\n",
     "    rmse = np.sqrt(np.mean((A @ K_f.reshape(-1) - b) ** 2))\n",
-    "    K_f_full = np.array([[K_f[motor_i][exponents.index(i)] if i in exponents else 0 for i in range(3)] for motor_i in range(4)])\n",
+    "    if separate:\n",
+    "        K_f_full = np.array([[K_f[motor_i][exponents.index(i)] if i in exponents else 0 for i in range(3)] for motor_i in range(4)])\n",
+    "    else:\n",
+    "        K_f_full = np.array([[K_f[0][exponents.index(i)] if i in exponents else 0 for i in range(3)] for motor_i in range(4)])\n",
     "    return K_f_full, rmse"
    ]
   },
@@ -561,19 +599,24 @@
    "outputs": [],
    "source": [
     "\n",
-    "exponents = [0, 2]\n",
-    "K_f_test, rmse = estimate_motor_parameters(combined_test, model, exponents)\n",
+    "K_f_test, rmse = estimate_motor_parameters(combined_test, model, exponents_thrust_curve)\n",
     "print(f\"K_f_test: {K_f_test}\")\n",
     "K_f_test_mean = K_f_test.mean(axis=0)\n",
     "print(f\"K_f_test_mean: {K_f_test_mean}\")\n",
-    "# rmse = motor_model_rmse(K_f_mean, combined, model, exponents)\n",
-    "print(f\"RMSE: {rmse:.3f}\")\n",
-    "\n",
+    "# rmse = motor_model_rmse(K_f_mean, combined, model, exponents)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
     "from tqdm import tqdm\n",
     "from tqdm.notebook import tqdm\n",
     "\n",
     "T_m_candidates = np.linspace(0.001, 0.3, 20)\n",
-    "results = [(T_m, *estimate_motor_parameters(combine(sliced_and_interpolated_flights_thrust, T_m)[0], model, exponents, verbose=False)) for T_m in tqdm(T_m_candidates)]\n",
+    "results = [(T_m, *estimate_motor_parameters(combine(sliced_and_interpolated_flights_thrust, T_m)[0], model, exponents_thrust_curve, verbose=False, separate=False)) for T_m in tqdm(T_m_candidates)]\n",
     "T_m, K_fs, rmses = zip(*results)"
    ]
   },
@@ -586,94 +629,19 @@
     "T_m = T_m_candidates[np.argmin(rmses)]\n",
     "K_f = K_fs[np.argmin(rmses)]\n",
     "K_f_mean = K_f.mean(axis=0)\n",
+    "print(f\"K_f: {K_f}\")\n",
+    "print(f\"K_f_mean: {K_f_mean}\")\n",
     "plt.figure()\n",
     "plt.plot(T_m_candidates, rmses, label=f\"T_m = {T_m}\")\n",
     "plt.legend()\n",
     "plt.show()\n",
     "\n",
     "thrust_curves = np.array([K_f_mean for _ in range(4)])\n",
+    "# thrust_curves = K_f\n",
     "\n",
     "combined_thrust, flights_thrust_processed = combine(sliced_and_interpolated_flights_thrust, T_m, thrust_curves=thrust_curves)\n",
-    "combined_inertia, flights_inertia_processed = combine(sliced_and_interpolated_flights_inertia, T_m, thrust_curves=thrust_curves)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "use_mean_kf = True\n",
-    "A_full = []\n",
-    "A_2x2 = []\n",
-    "A_z_full = []\n",
-    "A_z = []\n",
-    "b_full = []\n",
-    "b_2 = []\n",
-    "b_z = []\n",
-    "\n",
-    "t = []\n",
-    "torques = []\n",
-    "drag_torques = []\n",
-    "\n",
-    "num_steps = len(combined_inertia[\"rpms\"])\n",
-    "for step_i in tqdm(range(num_steps)):\n",
-    "    wx, wy, wz = np.zeros(3) #combined[\\\"omega\\\"][step_i]\\n\",\n",
-    "    dwx, dwy, dwz = combined_inertia[\"domega_fd\"][step_i]\n",
-    "    rpm = combined_inertia[\"rpms\"][step_i]\n",
-    "    # thrusts = [sum([(K_f_mean if use_mean_kf else K_f[motor_i])[exponent_i] * rpm[motor_i] ** exponent for exponent_i, exponent in enumerate(exponents)]) for motor_i in range(4)]\n",
-    "    thrusts = combined_inertia[\"thrusts\"][step_i]\n",
-    "    t.append(thrusts)\n",
-    "    current_b = np.array([np.cross(model[\"rotor_positions\"][motor_i], model[\"rotor_thrust_directions\"][motor_i]) * thrusts[motor_i] for motor_i in range(4)]).sum(axis=0)\n",
-    "    torques.append(current_b)\n",
-    "    b_full.append(current_b[:2])\n",
-    "    b_2.append(current_b[:2])\n",
-    "    b_z.append(current_b[2])\n",
-    "    current_A_J = np.array([\n",
-    "        [dwx, -wy*wz, wz*wy],\n",
-    "        [wx*wz, dwy, -wz*wx],\n",
-    "        [-wx*wy, wy*wx, dwz]\n",
-    "    ])\n",
-    "    current_A_Kd = np.array([-model[\"rotor_torque_directions\"][motor_i] * thrusts[motor_i] for motor_i in range(4)]).T #.sum(axis=1).reshape(3, 1)\n",
-    "    drag_torques.append(current_A_Kd)\n",
-    "    current_A = np.concatenate([current_A_J, current_A_Kd], axis=1)\n",
-    "    A_full.append(current_A)\n",
-    "    current_A_J_2x2 = np.array([\n",
-    "        [dwx, 0],\n",
-    "        [0, dwy],\n",
-    "    ])\n",
-    "    A_2x2.append(current_A_J_2x2)\n",
-    "    A_z_full.append(np.array([dwz, *current_A_Kd[2, :]]))\n",
-    "    A_z.append(np.array([dwz, *current_A_Kd.sum(axis=1)]))\n",
-    "\n"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "print(f\"A shape: {np.array(A_full).shape}\")\n",
-    "\n",
-    "A_full = np.array(A_full).reshape(-1, A_full[0].shape[-1])\n",
-    "b_full = np.array(b_full).reshape(-1)\n",
-    "A_2x2 = np.array(A_2x2).reshape(-1, A_2x2[0].shape[-1])\n",
-    "b_2 = np.array(b_2).reshape(-1)\n",
-    "\n",
-    "t = np.array(t)\n",
-    "torques = np.array(torques)\n",
-    "drag_torques = np.array(drag_torques)\n",
-    "drag_torques.shape"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "np.unique(combined_inertia[\"thrusts\"])"
+    "combined_inertia_roll_pitch, flights_inertia_roll_pitch_processed = combine(sliced_and_interpolated_flights_inertia_roll_pitch, T_m, thrust_curves=thrust_curves)\n",
+    "combined_inertia_yaw, flights_inertia_yaw_processed = combine(sliced_and_interpolated_flights_inertia_yaw, T_m, thrust_curves=thrust_curves)"
    ]
   },
   {
@@ -693,35 +661,10 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "start_index = np.argmax(flights_inertia_processed[0][\"timestamps\"] > 25)\n",
-    "end_index = np.argmax(flights_inertia_processed[0][\"timestamps\"] > 30)\n",
-    "\n",
-    "plt.plot(flights_inertia_processed[0][\"timestamps\"][start_index:end_index], flights_inertia_processed[0][\"domega_fd\"][start_index:end_index, 0])\n",
-    "plt.plot(flights_inertia_processed[0][\"timestamps\"][start_index:end_index], flights_inertia_processed[0][\"domega_gradient\"][start_index:end_index, 0])\n",
-    "plt.plot(flights_inertia_processed[0][\"timestamps\"][start_index:end_index], flights_inertia_processed[0][\"domega\"][start_index:end_index, 0])"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "combined_inertia[\"domega\"].shape\n",
-    "combined_inertia[\"thrusts\"].shape\n",
-    "torques[:, 2]"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
     "I = []\n",
     "for axis_i, axis_name in zip([0, 1], [\"x\", \"y\"]):\n",
-    "    dw_full = combined_inertia[\"domega\"][:, axis_i]\n",
-    "    torque_full = torques[:, axis_i]\n",
+    "    dw_full = combined_inertia_roll_pitch[\"domega\"][:, axis_i]\n",
+    "    torque_full = combined_inertia_roll_pitch[\"pre_torque_geometric\"].sum(axis=1)[:, axis_i]\n",
     "    perc = 50\n",
     "    dw_perc_lower = np.percentile(dw_full, perc)\n",
     "    dw_perc_upper = np.percentile(dw_full, 100-perc)\n",
@@ -754,12 +697,10 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "dwz = combined_inertia[\"domega\"][:, 2]\n",
     "I_xx, I_yy = I[:2]\n",
     "I_zz = (I_xx + I_yy)/2 * inertia_ratio\n",
     "I = [I_xx, I_yy, I_zz]\n",
-    "torque_z = torques[:, 2]\n",
-    "I_xx, I_yy, I_zz"
+    "print(f\"I_xx: {I_xx:.4f}, I_yy: {I_yy:.4f}, I_zz: {I_zz:.4f},\")"
    ]
   },
   {
@@ -771,11 +712,11 @@
     "K_ds = []\n",
     "perc_candidates = [50] #np.linspace(0.1, 50, 20)\n",
     "for perc in perc_candidates:\n",
-    "    combined_inertia[\"thrusts\"].shape\n",
+    "    combined_inertia_yaw[\"thrusts\"].shape\n",
     "    model[\"rotor_torque_directions\"].shape\n",
-    "    thrust_torques_inputs = combined_inertia[\"thrusts\"][:, :, np.newaxis] * model[\"rotor_torque_directions\"]\n",
+    "    thrust_torques_inputs = combined_inertia_yaw[\"thrusts\"][:, :, np.newaxis] * model[\"rotor_torque_directions\"]\n",
     "    thrust_torque_inputs_z_full = thrust_torques_inputs[:, :, 2].sum(axis=1)\n",
-    "    dwz_full = combined_inertia[\"domega\"][:, 2]\n",
+    "    dwz_full = combined_inertia_yaw[\"domega\"][:, 2]\n",
     "\n",
     "    thrust_torque_input_perc_lower = np.percentile(thrust_torque_inputs_z_full, perc)\n",
     "    thrust_torque_input_perc_upper = np.percentile(thrust_torque_inputs_z_full, 100-perc)\n",
