--- a/sysid/analyze_new.ipynb
+++ b/sysid/analyze_new.ipynb
@@ -18,14 +18,28 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "ulog_files = [\n",
-    "    \"logs/2024-01-08-pavel-fs/log_63_2024-1-8-16-37-54.ulg\",\n",
-    "    \"logs/2024-01-08-pavel-fs/log_64_2024-1-8-16-39-44.ulg\",\n",
-    "    \"logs/2024-01-08-pavel-fs/log_65_2024-1-8-16-40-52.ulg\",\n",
-    "    \"logs/2024-01-08-pavel-fs/log_66_2024-1-8-16-42-48.ulg\",\n",
-    "    \"logs/2024-01-12-pavel policy test/log_76_2024-1-12-17-25-30.ulg\",\n",
-    "    \"logs/2024-01-12-pavel policy test/log_77_2024-1-12-17-27-50.ulg\"\n",
-    "]\n",
+    "model_name = \"fs\"\n",
+    "if model_name == \"fs\":\n",
+    "    ulog_files = [\n",
+    "        \"logs/2024-01-08-pavel-fs/log_63_2024-1-8-16-37-54.ulg\",\n",
+    "        \"logs/2024-01-08-pavel-fs/log_64_2024-1-8-16-39-44.ulg\",\n",
+    "        \"logs/2024-01-08-pavel-fs/log_65_2024-1-8-16-40-52.ulg\",\n",
+    "        \"logs/2024-01-08-pavel-fs/log_66_2024-1-8-16-42-48.ulg\",\n",
+    "        \"logs/2024-01-12-pavel policy test/log_76_2024-1-12-17-25-30.ulg\",\n",
+    "        \"logs/2024-01-12-pavel policy test/log_77_2024-1-12-17-27-50.ulg\"\n",
+    "    ]\n",
+    "elif model_name == \"x500\":\n",
+    "    ulog_files = [\n",
+    "        \"logs/2023-12-27-x500/log_36_2023-12-27-14-21-32.ulg\",\n",
+    "        \"logs/2023-12-27-x500/log_37_2023-12-27-14-24-24.ulg\"\n",
+    "    ]\n",
+    "elif model_name == \"race6\":\n",
+    "    ulog_files = [\n",
+    "        \"logs/2023-12-13-nishanth-sysid/log_45_2023-12-13-21-07-46-up-and-down.ulg\",\n",
+    "        \"logs/2023-12-14-yang-crash/log_60_2023-12-14-20-26-16.ulg\",\n",
+    "        \"logs/2023-12-13-nishanth-sysid/log_46_2023-12-13-21-08-08-left-and-right.ulg\"\n",
+    "    ]\n",
+    "\n",
     "dfs = [load_ulg(file) for file in ulog_files]"
    ]
   },
@@ -54,33 +68,60 @@
     "# we then preprocess the data with time correlation (depends on the motor model) => makes the data iid\n",
     "# we use the iid data to estimate parameters\n",
     "\n",
-    "\n",
-    "rotor_x_displacement = 0.4179/2\n",
-    "rotor_y_displacement = 0.481332/2\n",
-    "# model is in FLU frame\n",
-    "model = {\n",
-    "    \"gravity\": 9.81,\n",
-    "    \"mass\": 2.3 + 1.05,\n",
-    "    \"rotor_positions\": np.array([\n",
-    "        [ rotor_x_displacement, -rotor_y_displacement, 0],\n",
-    "        [-rotor_x_displacement,  rotor_y_displacement, 0],\n",
-    "        [ rotor_x_displacement,  rotor_y_displacement, 0],\n",
-    "        [-rotor_x_displacement, -rotor_y_displacement, 0]\n",
-    "    ]),\n",
-    "    \"rotor_thrust_directions\": np.array([\n",
-    "        [0, 0, 1],\n",
-    "        [0, 0, 1],\n",
-    "        [0, 0, 1],\n",
-    "        [0, 0, 1]\n",
-    "    ]),\n",
-    "    \"rotor_torque_directions\": np.array([\n",
-    "        [0, 0, -1],\n",
-    "        [0, 0, -1],\n",
-    "        [0, 0,  1],\n",
-    "        [0, 0,  1]\n",
-    "    ])\n",
-    "}\n",
-    "g = np.array([0, 0, -model[\"gravity\"]])"
+    "if model_name == \"fs\":\n",
+    "    rotor_x_displacement = 0.4179/2\n",
+    "    rotor_y_displacement = 0.481332/2\n",
+    "    # model is in FLU frame\n",
+    "    model = {\n",
+    "        \"gravity\": 9.81,\n",
+    "        \"mass\": 2.3 + 1.05,\n",
+    "        \"rotor_positions\": np.array([\n",
+    "            [ rotor_x_displacement, -rotor_y_displacement, 0],\n",
+    "            [-rotor_x_displacement,  rotor_y_displacement, 0],\n",
+    "            [ rotor_x_displacement,  rotor_y_displacement, 0],\n",
+    "            [-rotor_x_displacement, -rotor_y_displacement, 0]\n",
+    "        ]),\n",
+    "        \"rotor_thrust_directions\": np.array([\n",
+    "            [0, 0, 1],\n",
+    "            [0, 0, 1],\n",
+    "            [0, 0, 1],\n",
+    "            [0, 0, 1]\n",
+    "        ]),\n",
+    "        \"rotor_torque_directions\": np.array([\n",
+    "            [0, 0, -1],\n",
+    "            [0, 0, -1],\n",
+    "            [0, 0,  1],\n",
+    "            [0, 0,  1]\n",
+    "        ])\n",
+    "    }\n",
+    "    g = np.array([0, 0, -model[\"gravity\"]])\n",
+    "elif model_name == \"x500\":\n",
+    "    rotor_x_displacement = 0.1765\n",
+    "    rotor_y_displacement = 0.1765\n",
+    "    model = {\n",
+    "        \"gravity\": 9.81,\n",
+    "        \"mass\": 2,\n",
+    "    \n",
+    "        \"rotor_positions\": np.array([\n",
+    "            [ rotor_x_displacement, -rotor_y_displacement, 0],\n",
+    "            [-rotor_x_displacement,  rotor_y_displacement, 0],\n",
+    "            [ rotor_x_displacement,  rotor_y_displacement, 0],\n",
+    "            [-rotor_x_displacement, -rotor_y_displacement, 0]\n",
+    "        ]),\n",
+    "        \"rotor_thrust_directions\": np.array([\n",
+    "            [0, 0, 1],\n",
+    "            [0, 0, 1],\n",
+    "            [0, 0, 1],\n",
+    "            [0, 0, 1]\n",
+    "        ]),\n",
+    "        \"rotor_torque_directions\": np.array([\n",
+    "            [0, 0, -1],\n",
+    "            [0, 0, -1],\n",
+    "            [0, 0,  1],\n",
+    "            [0, 0,  1]\n",
+    "        ])\n",
+    "    }\n",
+    "    g = np.array([0, 0, -model[\"gravity\"]])"
    ]
   },
   {
@@ -231,37 +272,60 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "timeframes_thrust = [\n",
-    "    {\n",
-    "        \"flight\": 0,\n",
-    "        \"start\": 10,\n",
-    "        \"end\": 45\n",
-    "    }\n",
-    "]\n",
-    "timeframes_inertia_roll_pitch = [\n",
-    "    {\n",
-    "        \"flight\": 1,\n",
-    "        \"start\": 10,\n",
-    "        \"end\": 17\n",
-    "    },\n",
-    "    {\n",
-    "        \"flight\": 1,\n",
-    "        \"start\": 19,\n",
-    "        \"end\": 35\n",
-    "    },\n",
-    "    {\n",
-    "        \"flight\": 2,\n",
-    "        \"start\": 10,\n",
-    "        \"end\": 45\n",
-    "    }\n",
-    "]\n",
-    "timeframes_inertia_yaw = [\n",
-    "    {\n",
-    "        \"flight\": 3,\n",
-    "        \"start\": 15,\n",
-    "        \"end\": 30\n",
-    "    }\n",
-    "]"
+    "if model_name == \"fs\":\n",
+    "    timeframes_thrust = [\n",
+    "        {\n",
+    "            \"flight\": 0,\n",
+    "            \"start\": 10,\n",
+    "            \"end\": 45\n",
+    "        }\n",
+    "    ]\n",
+    "    timeframes_inertia_roll_pitch = [\n",
+    "        {\n",
+    "            \"flight\": 1,\n",
+    "            \"start\": 10,\n",
+    "            \"end\": 17\n",
+    "        },\n",
+    "        {\n",
+    "            \"flight\": 1,\n",
+    "            \"start\": 19,\n",
+    "            \"end\": 35\n",
+    "        },\n",
+    "        {\n",
+    "            \"flight\": 2,\n",
+    "            \"start\": 10,\n",
+    "            \"end\": 45\n",
+    "        }\n",
+    "    ]\n",
+    "    timeframes_inertia_yaw = [\n",
+    "        {\n",
+    "            \"flight\": 3,\n",
+    "            \"start\": 15,\n",
+    "            \"end\": 30\n",
+    "        }\n",
+    "    ]\n",
+    "elif model_name == \"x500\":\n",
+    "    timeframes_thrust = [\n",
+    "        {\n",
+    "            \"flight\": 0,\n",
+    "            \"start\": 30,\n",
+    "            \"end\": 45\n",
+    "        }\n",
+    "    ]\n",
+    "    timeframes_inertia_roll_pitch = [\n",
+    "        {\n",
+    "            \"flight\": 1,\n",
+    "            \"start\": 10,\n",
+    "            \"end\": 40\n",
+    "        }\n",
+    "    ]\n",
+    "    timeframes_inertia_yaw = [\n",
+    "        {\n",
+    "            \"flight\": 1,\n",
+    "            \"start\": 10,\n",
+    "            \"end\": 40\n",
+    "        }\n",
+    "    ]"
    ]
   },
   {
@@ -678,6 +742,8 @@
     "    torque = torque_full[mask]\n",
     "\n",
     "    I_axis = 1/(dw**2).sum() * np.inner(dw, torque)\n",
+    "    I_inv_axis = 1/(torque**2).sum() * np.inner(dw, torque)\n",
+    "#     I_axis = 1/I_inv_axis\n",
     "    print(f\"I_{axis_name}{axis_name}: {I_axis:.3f}\")\n",
     "    plt.figure()\n",
     "    plt.title(f\"Axis: {axis_name}\")\n",
@@ -686,6 +752,7 @@
     "    plt.scatter(torque, dw, s=0.1)\n",
     "    torques_in = np.linspace(torque_full.min(), torque_full.max(), 100)\n",
     "    plt.plot(torques_in, torques_in / (I_axis), color=\"red\")\n",
+    "    plt.plot(torques_in, torques_in / (1/I_inv_axis), color=\"red\")\n",
     "    plt.savefig(f\"figures/inertia_{axis_name}.pdf\")\n",
     "    plt.show()\n",
     "    I.append(I_axis)"
@@ -733,6 +800,7 @@
     "    b = dwz * I_zz\n",
     "\n",
     "    K_d = 1/(thrust_torque_inputs_z ** 2).sum() * np.inner(thrust_torque_inputs_z, b)\n",
+    "    print(f\"b: {(b**2).sum()}\")\n",
     "    K_ds.append(K_d)\n",
     "\n",
     "    plt.figure()\n",
